--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,17 @@
     font-size: 70px;
     color: rgb(255, 255, 255);
 }
+
+.search-box {
+    padding-top: 100px !important;
+    padding-bottom: 20px !important;
+  }
+  
+  .search-heading {
+    font-size: 30px;
+    margin-bottom: 16px;
+  }
+  
+  .detailsPageContent {
+    padding-top: 100px !important
+  }
